[gd_scene load_steps=4 format=3 uid="uid://r1el5plw4yls"]

[ext_resource type="Script" path="res://Elements/Debug/ConsoleManager.gd" id="1_j67dm"]
[ext_resource type="FontFile" uid="uid://btw8oqfk3julq" path="res://_assets/Fonts/CourierPrime-Regular.ttf" id="2_ofw6k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8ad2"]
bg_color = Color(0, 0, 0, 0.239216)

[node name="Console" type="MarginContainer"]
custom_minimum_size = Vector2(0, 780)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("1_j67dm")
helpList = PackedStringArray("clear: clears the log", "k_default: all knowledge from playerData go to default")
arrowColor = Color(0.752941, 0.262745, 0.454902, 1)
outputColor = Color(0.407843, 0.72549, 0.372549, 0.776471)
doneColor = Color(0.772549, 0.333333, 0.835294, 1)

[node name="consoleElements" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="logPanel" type="Panel" parent="consoleElements"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x8ad2")

[node name="consoleLog" type="RichTextLabel" parent="consoleElements/logPanel"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
offset_left = 10.0
offset_top = 4.0
offset_right = 665.0
offset_bottom = 404.0
theme_override_fonts/normal_font = ExtResource("2_ofw6k")
bbcode_enabled = true

[node name="writeLine" type="LineEdit" parent="consoleElements"]
layout_mode = 2
